sources/digitrans/digitransit-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: digitransit-proxy
spec:
  selector:
    app: digitransit-proxy
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  externalIPs:
  - 192.168.10.8
# FIXME! ingress

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digitransit-proxy
  labels:
    app: digitransit-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digitransit-proxy
  template:
    metadata:
      labels:
        app: digitransit-proxy
    spec:
      containers:
      - name: digitransit-proxy
        image: verschwoerhaus/digitransit-proxy-vsh:01671d2
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8080
