sources/digitrans/digitransit-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: digitransit-ui-vsh
spec:
  selector:
    app: digitransit-ui
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digitransit-ui
  labels:
    app: digitransit-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digitransit-ui
  template:
    metadata:
      labels:
        app: digitransit-ui
    spec:
      containers:
      - name: digitransit-ui
        image: verschwoerhaus/digitransit-ui:1172406
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8080
