sources/digitrans/graphiql.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphiql
spec:
  selector:
    app: graphiql
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphiql
  labels:
    app: graphiql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graphiql
  template:
    metadata:
      labels:
        app: graphiql
    spec:
      containers:
      - name: graphiql
        image: verschwoerhaus/graphiql:2019-10-30
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8080
